Lazily loading locations.  Merged report XML and image XML.  Updated old report XML to the new schema.

--- a/bin/build
+++ b/bin/build
@@ -1,4 +1,4 @@
 #!/usr/bin/bash
 umask 022
 debug="-d:NYTProf"
-cd ~/scramble && perl bin/parse --dictionary-dir dict --rep data/gabrielx/reports --images data/gabrielx/images --tem data/gabrielx/templates --out html -v "$@"
+cd ~/scramble && perl bin/parse --dictionary-dir dict --images data/gabrielx/images --tem data/gabrielx/templates --out html -v "$@"
