--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "private": "true",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "lightbox2": "^2.10.0"
+  },
   "devDependencies": {
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "style-loader": "^0.21.0",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.0"
   },
