--- a/javascript/package.json
+++ b/javascript/package.json
@@ -5,7 +5,9 @@
   "private": "true",
   "dependencies": {
     "blueimp-gallery": "^2.33.0",
-    "jquery": "^3.3.1"
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6"
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
