--- a/bin/build
+++ b/bin/build
@@ -1,6 +1,11 @@
 #!/usr/bin/env bash
 umask 022
-debug="-d:NYTProf"
+
+# PERL5OPT="-d:NYTProf"
+
+# To get line coverage:
+# rm -rf cover_db && PERL5OPT=-MDevel::Cover bin/build && cover && cp -r /home/vagrant/projects/yellowleaf-trips/cover_db /vagrant/
+# file:///C:/Users/Gabriel/projects/personal-environment/vagrant/ubuntu-16.04/cover_db/coverage.html
 
 output_dir="/vagrant_gabriel_home/projects/yellowleaf-trips/"
 dir="$(dirname "$0")/.."
