--- a/javascript/package.json
+++ b/javascript/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "private": "true",
   "dependencies": {
-    "blueimp-gallery": "^2.33.0",
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.6"
+    "blueimp-gallery": "^2.33.0"
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
